--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="imagem">
                     <img src="gato.svg" alt="gato">
                 </div>
-            <h2><b>Avaliação</b> Fundamentos de T.I<br>Data: 12/04/2024 <br>Dia da semana: Sexta-Feira</h2>
+            <h2><b>Avaliação</b> <br> Fundamentos de T.I<br>Data: 12/04/2024 <br>Dia da semana: Sexta-Feira</h2>
         </div>
         </div>
        
